--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hjiayz/simple-channel.git"
+  },
+  "bugs":{
+    "url": "https://github.com/hjiayz/simple-channel/issues"
   }
 }
